# MonitoringSystem

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  TASK.md  rename.py  update_cmake.py
src/: CMakeLists.txt  resources.qrc
src/application/: App.cc  App.h  app.cc  app.h  appinfo.h  appinfo.h.in.cmake  main.cc
src/core/: AgentManager.cc  AgentManager.h  App.cc  CMakeLists.txt  ConfigReader.cc  ConfigReader.h  Core.cc  Core.h  IAgentSubscriber.h  MetricLogger.cc  MetricLogger.h  MetricScheduler.cc  MetricScheduler.h  core_test.cc  it_were_main.cc  main.cc
src/core/agent/: AgentBundleLoader.cc  AgentBundleLoader.h  AgentManager.cc  AgentManager.h  IAgentSubscriber.h  agent_bundle.cc  agent_bundle.h  agent_bundle_loader.cc  agent_bundle_loader.h  agent_manager.cc  agent_manager.h  i_agent_subscriber.h
src/core/analyzer/: MetricAnalyzer.cc  MetricAnalyzer.h  metric_analyzer.cc  metric_analyzer.h
src/core/app/: App.cc  App.h  Core.cc  Core.h  appinfo.h
src/core/config/: Properties.cc  Properties.h
src/core/core/: Core.cc  Core.h  core.cc  core.h
src/core/executor/: AgentExecutor.cc  AgentExecutor.h  AgentScheduler.cc  AgentScheduler.h  ExecutorService.cc  ExecutorService.h  agent_executor.cc  agent_executor.h  agent_scheduler.cc  agent_scheduler.h
src/core/metric/: ConfiguredMetric.cc  ConfiguredMetric.h  IMetricSubscriber.h  MetricCriticalValue.cc  MetricCriticalValue.h  MetricEvent.cc  MetricEvent.h  configured_metric.cc  configured_metric.h  i_metric_subscriber.h  metric_critical_value.cc  metric_critical_value.h  metric_event.cc  metric_event.h
src/core/notifier/: CriticalValueHandler.cc  CriticalValueHandler.h  FailedMetric.h  IMessageSender.cc  IMessageSender.h  IMetricNotifier.h  IMetricSubscriber.h  NotificationController.cc  NotificationController.h  failed_metric.h  i_message_sender.cc  i_message_sender.h  notification_controller.cc  notification_controller.h
src/core/notifier/email/: Email.cc  Email.h  EmailAddress.cc  EmailAddress.h  EmailSender.cc  EmailSender.h  email.cc  email_address.cc  email_address.h  email_sender.cc  email_sender.h
src/core/notifier/telegram/: ITelegramBot.h  TelegramBot.cc  TelegramBot.h  TelegramSender.cc  TelegramSender.h  TelegramUserRepository.cc  TelegramUserRepository.h  i_telegram_bot.h  i_user_repository.h  telegram_bot.cc  telegram_bot.h  telegram_sender.cc  telegram_sender.h  telegram_user_repository.cc  telegram_user_repository.h
src/gui/: CMakeLists.txt  MainController.cc  MainController.h
src/gui/controller/: MainController.cc  MainController.h  main_controller.cc  main_controller.h
src/gui/view/: main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/modules/: CMakeLists.txt  main.cc  module_header.h
src/modules/bonus/: BonusAgent.cc  BonusAgent.h  CMakeLists.txt  Makefile  agent.properties  agent_factory.cc  bonus.cc  bonus.h  bonus_agent.cc  bonus_agent.h
src/modules/cpu/: CMakeLists.txt  CPUAgent.cc  CPUAgent.h  Makefile  agent_factory.cc  cpu.cc  cpu.h  cpu_agent.cc  cpu_agent.h
src/modules/dumb_module/: CMakeLists.txt  DumbAgent.cc  DumbAgent.h  Makefile  agent_factory.cc  dumb_funcs.cc  dumb_funcs.h
src/modules/include/: Agent.h  Metric.cc  Metric.h  agent.h  metric.cc  metric.h  pstream.h
src/modules/memory/: CMakeLists.txt  Makefile  MemoryAgent.cc  MemoryAgent.h  agent_factory.cc  memory.cc  memory.h  memory_agent.cc  memory_agent.h
src/modules/network/: CMakeLists.txt  Makefile  NetworkAgent.cc  NetworkAgent.h  agent_factory.cc  network.cc  network.h  network_agent.cc  network_agent.h
test/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cc  test.h
test/core/: properties_reader_test.cc
test/core/agent/: AgentBundleLoaderTest.cc  AgentBundleTest.cc  AgentManagerTest.cc  agent_bundle_loader_test.cc  agent_bundle_test.cc  agent_manager_test.cc
test/core/analyzer/: MetricAnalyzerTest.cc  metric_analyzer_test.cc
test/core/config/: PropertiesTest.cc  properties_test.cc
test/core/core/: CoreTest.cc  core_test.cc
test/core/executor/: AgentExecutorTest.cc  AgentSchedulerTest.cc  agent_executor_test.cc  agent_scheduler_test.cc  executor_service_test.cc
test/core/metric/: ConfiguredMetricTest.cc  MetricCriticalValueTest.cc  MetricEventTest.cc  configured_metric_test.cc  metric_critical_value_test.cc  metric_event_test.cc
test/core/notifier/: FailedMetric.cc  failed_metric.cc
test/core/notifier/email/: EmailAddress.cc  email_address.cc
test/core/notifier/telegram/: TelegramUserRepository.cc  telegram_user_repository.cc
test/mock/agent/: MockAgent.h  MockAgentManager.h  MockAgentSubscriber.h  mock_agent.h  mock_agent_manager.h  mock_agent_subscriber.h
test/mock/config/: MockProperties.h  mock_properties.h
test/mock/metric/: MockMetricAnalyzer.h  MockMetricSubscriber.h  mock_metric_analyzer.h  mock_metric_subscriber.h
test/modules/test_module/: CMakeLists.txt  TestAgent.cc  TestAgent.h  agent_factory.cc  test_agent.cc  test_agent.h  test_funcs.cc  test_funcs.h
